Update and rename Toggle Switch Example.ipynb to ToggleSwitch/Toggle Switch Example.ipynb

--- a/ToggleSwitch/Toggle Switch Example.ipynb
+++ b/ToggleSwitch/Toggle Switch Example.ipynb
@@ -10,7 +10,7 @@
     "## 1. System Information\n",
     "The toggle switch system involves 6 molecular species:  genes $G_{x}$, $G_{y}$, which transcript two proteins $P_{x}$, $P_{y}$ inhibiting the gene expression of each other. There are two protein-DNA complexes $\\bar{G}_{x}$, $\\bar{G}_{y}$, with protein $P_{y}$ ($P_{x}$) bound to gene $G_{x}$ ($G_{y}$). The dimer of the protein $P_{x}$ ($P_{y}$) inhibits the activity of the gene $G_{y}$ ($G_{x}$). \n",
     "\n",
-    "<img src=\".\\ToggleSwitch\\ToggleSwitch_panela.svg\" width=\"200\"/> \n",
+    "<img src=\".\\ToggleSwitch_panela.svg\" width=\"200\"/> \n",
     "\n",
     "The model can be written as the chemical reactions:\n",
     "\\begin{align}\n",
