--- a/ToggleSwitch/Toggle Switch Example.ipynb
+++ b/ToggleSwitch/Toggle Switch Example.ipynb
@@ -10,7 +10,7 @@
     "## 1. System Information\n",
     "The toggle switch system involves 6 molecular species:  genes $G_{x}$, $G_{y}$, which transcript two proteins $P_{x}$, $P_{y}$ inhibiting the gene expression of each other. There are two protein-DNA complexes $\\bar{G}_{x}$, $\\bar{G}_{y}$, with protein $P_{y}$ ($P_{x}$) bound to gene $G_{x}$ ($G_{y}$). The dimer of the protein $P_{x}$ ($P_{y}$) inhibits the activity of the gene $G_{y}$ ($G_{x}$). \n",
     "\n",
-    "<img src=\"\\ToggleSwitch_panela.svg\" width=\"200\"/> \n",
+    "<img src=\".\\ToggleSwitch\\ToggleSwitch_panela.svg\" width=\"200\"/> \n",
     "\n",
     "The model can be written as the chemical reactions:\n",
     "\\begin{align}\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc7e87d",
+   "id": "f86e07cd",
    "metadata": {},
    "source": [
     "### 5.1 The time evolution of the average counts of species"
@@ -584,7 +584,7 @@
    "source": [
     "<table>\n",
     "<td> \n",
-    "<img src=\"ToggleSwitch\\ToggleSwitch_panela1.svg\" width=\"200\"/> <br>\n",
+    "<img src=\"https://github.com/jiadeyu0602/CheatSheet/raw/master/ToggleSwitch_panela.svg\" width=\"200\"/> <br>\n",
     "</td> \n",
     "<td> \n",
     "<img src=\"ToggleSwitch\\ToggleSwitch_panela2.svg\" width=\"200\"/> <br>\n",
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a307f921",
+   "id": "c5830753",
    "metadata": {},
    "source": [
     "### 5.2 Comparison of the means and standard deviations of the counts of species"
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa638d11",
+   "id": "a229b377",
    "metadata": {},
    "source": [
     "### 5.3 The marginal distributions of species"
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e89e37e",
+   "id": "693acf3f",
    "metadata": {},
    "source": [
     "### 5.4 The joint distribution of species"
