--- a/Toggle Switch Example.ipynb
+++ b/Toggle Switch Example.ipynb
@@ -7,10 +7,14 @@
    "source": [
     "# Into to NNCME with a Toggle Switch Example\n",
     "\n",
-    "## 1. System Information\n",
+    "## 1. Toggle Switch System\n",
     "The toggle switch system involves 6 molecular species:  genes $G_{x}$, $G_{y}$, which transcript two proteins $P_{x}$, $P_{y}$ inhibiting the gene expression of each other. There are two protein-DNA complexes $\\bar{G}_{x}$, $\\bar{G}_{y}$, with protein $P_{y}$ ($P_{x}$) bound to gene $G_{x}$ ($G_{y}$). The dimer of the protein $P_{x}$ ($P_{y}$) inhibits the activity of the gene $G_{y}$ ($G_{x}$). \n",
     "\n",
-    "<img src=\"https://github.com/jiadeyu0602/CheatSheet/raw/master/ToggleSwitch_panela.svg\" width=\"200\"/> \n",
+    "<table>\n",
+    "<td> \n",
+    "<img src=\"https://github.com/jiadeyu0602/CheatSheet/raw/master/ToggleSwitch_panela.svg\" width=\"200\"/> <br>\n",
+    "</td> \n",
+    "</table>\n",
     "\n",
     "The model can be written as the chemical reactions:\n",
     "\\begin{align}\n",
@@ -61,7 +65,7 @@
    "metadata": {},
    "source": [
     "## 2. Create a ToggleSwitch.py\n",
-    "Input toggle switch system as a `.py` file. Include initial conditions, species number constraint, reaction rates and the stoichiometric matrix in the function 'rates' . Furthermore, function 'init' and 'Propensity' are essential for every system and function 'MaskToggleSwitch' is used to constrain the count of certain species in this system."
+    "Input toggle switch system as a `.py` file. Include initial conditions, species number constraint, reaction rates and the stoichiometric matrix in the function 'rates' . What's more, function 'init' and 'Propensity' are essential for every system and function 'MaskToggleSwitch' is used to constrain the count of certain species in this system."
    ]
   },
   {
@@ -607,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Comparison of the means and standard deviations of the counts of the genes and proteins between the VAN and the Gillespie simulation, at time points $t = 0, 1, ..., 39, 40$.\n",
+    "# Comparison of the means and standard deviations of the counts of the genes and proteins between the VAN and the Gillespie simulation, at time points t = 0, 1, ..., 39, 40.\n",
     "####Gene-------------\n",
     "plt.rc('font', size=56)\n",
     "legendsize=50\n",
