Update and rename Start with a Simple Gene Expression Example.ipynb to Start with a Simple Example.ipynb

--- a/Start with a Simple Example.ipynb
+++ b/Start with a Simple Example.ipynb
@@ -5,7 +5,7 @@
    "id": "28c7d84b",
    "metadata": {},
    "source": [
-    "# Into to NNCME with a Gene Expression Example - Simple Version\n",
+    "# Intro to NNCME with a Gene Expression Example - Simple Version\n",
     "\n",
     "This is a simplified step-by-step guideline of implementing a gene expression example with NNCME. \\\n",
     "Follow this notebook, you can conveniently use the VAN to gain a gene expression system data which contains the joint distribution between species. \\\n",
