Update A Simple Template.ipynb

--- a/A Simple Template.ipynb
+++ b/A Simple Template.ipynb
@@ -10,7 +10,7 @@
     "This is a simplified step-by-step guideline of implementing a gene expression example with NNCME. \\\n",
     "Follow this notebook, you can conveniently use the VAN to gain a gene expression system data which contains the joint distribution between species. \\\n",
     "We also provide an optional code for generating the Gillespie trajectories and plotting the result.\\\n",
-    "A more detailed guideline can be seen in `Detailed Gene Expression Example.ipynb`.\n",
+    "A more detailed guideline can be seen in `Detailed Version of Gene Expression.ipynb`.\n",
     "\n",
     "## 1. Gene Expression System\n",
     "\n",
@@ -132,7 +132,7 @@
     "args.delta_t=0.1 #Time step length\n",
     "\n",
     "args.net ='rnn'\n",
-    "args.max_stepAll=5000 #Maximum number of steps first time ste\n",
+    "args.max_stepAll=5000 #Maximum number of steps first time step\n",
     "args.max_stepLater=100 #Maximum number of steps of later time steps\n",
     "args.net_depth=1 # including output layer and not input data layer\n",
     "args.net_width=16\n",
