Update Toggle Switch Example.ipynb

--- a/Toggle Switch Example.ipynb
+++ b/Toggle Switch Example.ipynb
@@ -8,7 +8,7 @@
     "# Into to NNCME with a Toggle Switch Example\n",
     "\n",
     "This is a detailed step-by-step guideline of implementing a toggle switch example with NNCME. \\\n",
-    "A simple example of a gene expression system can be seen in `Start with a Simple Gene Expression Example.ipynb`.\\\n",
+    "A simple example of a gene expression system can be seen in `A Simple Template.ipynb`.\\\n",
     "If you would like to explore more with NNCME, please refer to the `.py` files of other representative examples.\n",
     "\n",
     "\n",
@@ -70,7 +70,7 @@
    "metadata": {},
    "source": [
     "## 2. Create a ToggleSwitch.py\n",
-    "Input toggle switch system as a `.py` file. Include initial conditions, species number constraint, reaction rates and the stoichiometric matrix in the function 'rates' . What's more, function 'init' and 'Propensity' are essential for every system and function 'MaskToggleSwitch' is used to constrain the count of certain species in this system."
+    "Input toggle switch system as a `.py` file. Include initial conditions, species number constraint, reaction rates and the stoichiometric matrix in the function 'rates' . In addition, function 'init' and 'Propensity' are essential for every system and function 'MaskToggleSwitch' is used to constrain the count of certain species in this system."
    ]
   },
   {
