Update A Simple Template.ipynb

--- a/A Simple Template.ipynb
+++ b/A Simple Template.ipynb
@@ -105,7 +105,7 @@
    "id": "aa9b2677",
    "metadata": {},
    "source": [
-    "PC users (Windows): Run `MasterEq.py` after necessary changes according to the gene expression example. Adjust the hyperparameters if you need. After this step, you can get the system data by the VAN, which contains the joint distribution information between species."
+    "PC users (Windows): Run `MasterEq.py` after necessary changes according to the gene expression example. Adjust the hyperparameters if you need. After this step, you can get the system data by the VAN, which contains the joint distribution information between species. (`Data.npz` in the `out` folder)"
    ]
   },
   {
