--- a/Toggle Switch Example.ipynb
+++ b/Toggle Switch Example.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "<table>\n",
     "<td> \n",
-    "<img src=\"https://github.com/yukiweng62/CheatSheet/raw/master/ToggleSwitch_panela.svg\" width=\"200\"/> <br>\n",
+    "<img src=\"https://raw.githubusercontent.com/yukiweng62/CheatSheet/master/ToggleSwitch_panela.svg\" width=\"200\"/> <br>\n",
     "</td> \n",
     "</table>\n",
     "\n",
